--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 body {
     font: 15px/1.5 Arial, sans-serif;
-    background-color: #FFB900;
+    background-color: inherit;
 }
 
 
@@ -97,6 +97,7 @@ nav ul li:hover {
 .logo-row {
     text-align: center;
     height: 100%;
+    background-color: #FFB900;
 
 }
 
