--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ header .branding {
 header nav {
     float: right;
     margin-top: 20px;
+    font-weight: bold;
 }
 
 header .highlight, header .current {
@@ -102,25 +103,25 @@ nav ul li:hover {
 }
 
 .logo {
-    display: inline-block;
-    background: url("../img/dog_logo.jpeg") no-repeat 0 -461px;
+    background: url("../img/dog_logo.jpeg") no-repeat 0 81%;
+    background-repeat: no-repeat;
+    background-attachment: local;
+    background-size: cover;
     color: white;
     border: 3px solid #FFB900;
     border-radius: 30px;
-    width: 100%;
-    background-size: cover;
+    width: 99%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 
 .logo h1 {
-    margin-top: 60px;
+    margin-top: 35px;
+    margin-bottom: 35px;
     font-size: 55px;
 }
 
-.logo p {
-    font-size: 20px;
-    margin-bottom: 60px;
-}
 
 /*SLIDESHOWS*/
 
@@ -137,6 +138,8 @@ nav ul li:hover {
 #facts {
     float: right;
     width: 47.5%;
+    margin-top: 120px;
+
 }
 #facts .fact {
     border: 3px solid #FFB900;
@@ -156,12 +159,15 @@ nav ul li:hover {
     width: 100%;
 }
 
+
 /*BOXES*/
 
 #boxes {
-    margin-top: 20px;
     width: 100%;
     text-align:  center;
+    background-color: #FFB900;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 #boxes .box {
@@ -206,7 +212,6 @@ nav ul li:hover {
 
 footer {
     padding: 20px;
-    margin-top: 20px;
     color: #FFB900;
     background-color: #35424a;
 }
@@ -282,8 +287,47 @@ th, td {
 
 #about {
     background-color: #35424a;
+    color: #FFB900;
 }
 
+#about h1 {
+    font-size: 30px;
+    text-align: left;
+}
+
+#about h2 {
+    font-size: 25px;
+    text-align: left;
+}
+
+#about ul li {
+  list-style-type: disc;
+  margin-left: 30px;
+  text-align: left;
+}
+
+#about .bold {
+  font-size: 20px;
+}
+
+#about p {
+  text-align: left;
+}
+
+#about .contact-img {
+  width: 70%;
+}
+
+#certificate {
+  float: right;
+  width: 30%;
+}
+
+.text {
+  float: left;
+  width: 70%;
+  font-size: 20px;
+}
 
 
 /*CONTACT*/
@@ -398,12 +442,18 @@ th, td {
         float: none;
         padding: 0;
     }
-
-    /*BOXES*/
-    #boxes {
-        margin-top: 10px;
-
+    /* ABOUT */
+    #about .text {
+      float: none;
+      width: 100%;
     }
+
+    #about #certificate {
+      float: none;
+      width: 100%;
+      margin-top: 25px;
+    }
+    /*BOXES*/
 
     #boxes .box {
         float: none;
@@ -420,7 +470,6 @@ th, td {
     /*FOOTER*/
     footer {
         padding: 10px;
-        margin-top: 10px;
         color: #FFB900;
         background-color: #35424a;
     }
@@ -496,7 +545,7 @@ th, td {
     /*LOGO*/
     .logo {
         width: 100%;
-        background: url("../img/dog_logo.jpeg") no-repeat -488px -400px;
+        background: url("../img/dog_logo.jpeg") no-repeat -488px -511px;
     }
     .logo h1 {
         font-size: 60px;
@@ -533,10 +582,19 @@ th, td {
         padding: 0;
     }
 
-    /*BOXES*/
-    #boxes {
-        margin-top: 10px;
+    /* ABOUT */
+    #about .text {
+      float: none;
+      width: 100%;
     }
+
+    #about #certificate {
+      float: none;
+      width: 100%;
+      margin-top: 25px;
+    }
+
+    /*BOXES*/
 
     #boxes .box {
         float: none;
@@ -619,7 +677,7 @@ th, td {
     /*LOGO*/
     .logo {
         width: 100%;
-        background: url("../img/dog_logo.jpeg") no-repeat -364px -400px;
+        background: url("../img/dog_logo.jpeg") no-repeat -466px -549px;
     }
     .logo h1 {
         font-size: 60px;
@@ -656,10 +714,19 @@ th, td {
         padding: 0;
     }
 
-    /*BOXES*/
-    #boxes {
-        margin-top: 10px;
+    /* ABOUT */
+    #about .text {
+      float: none;
+      width: 100%;
     }
+
+    #about #certificate {
+      float: none;
+      width: 100%;
+      margin-top: 25px;
+    }
+
+    /*BOXES*/
 
     #boxes .box {
         float: none;
@@ -741,7 +808,7 @@ th, td {
     /*LOGO*/
     .logo {
         width: 100%;
-        background: url("../img/dog_logo.jpeg") no-repeat -268px -400px;
+        background: url("../img/dog_logo.jpeg") no-repeat 47% 69%;
     }
     .logo h1 {
         font-size: 60px;
@@ -779,9 +846,6 @@ th, td {
     }
 
     /*BOXES*/
-    #boxes {
-        margin-top: 10px;
-    }
 
     #boxes .box {
         float: none;
@@ -860,7 +924,7 @@ th, td {
     /*LOGO*/
     .logo {
         width: 100%;
-        background: url("../img/dog_logo.jpeg") no-repeat -113px -400px;
+        background: url("../img/dog_logo.jpeg") no-repeat 47% 69%;
     }
     .logo h1 {
         font-size: 60px;
@@ -889,6 +953,8 @@ th, td {
     #facts {
         float: right;
         width: 47.5%;
+        margin-top: 0;
+        margin-right: 10px;
     }
     #facts p {
         font-size: 20px;
@@ -896,10 +962,12 @@ th, td {
         padding: 0;
     }
 
+    /* ABOUT */
+    #about .contact-img {
+    width: 90%;
+}
+
     /*BOXES*/
-    #boxes {
-        margin-top: 10px;
-    }
 
     #boxes .box {
         float: left;
@@ -962,4 +1030,3 @@ th, td {
 
     }
 }
-
